k8s/jenkins.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-master
  labels:
    app: "jenkins"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: "jenkins-master"
      annotations:
        pod.alpha.kubernetes.io/init-containers: '[
              {
                  "name": "copy-default-config",
                  "image": "rig/k8s/jenkins-master",
                  "imagePullPolicy": "IfNotPresent",
                  "command": ["cp", "-n", "/var/jenkins_config/config.xml", "/var/jenkins_home"],
                  "volumeMounts": [
                      {
                          "name": "jenkins-config",
                          "mountPath": "/var/jenkins_config"
                      },
                      {
                          "name": "jenkins-home",
                          "mountPath": "/var/jenkins_home"
                      }
                  ]
              }
          ]'
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - name: jenkins-master
          image: "rig/k8s/jenkins-master"
          imagePullPolicy: "IfNotPresent"
          args: [ "--argumentsRealm.passwd.$(ADMIN_USER)=$(ADMIN_PASSWORD)",  "--argumentsRealm.roles.$(ADMIN_USER)=admin"]
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 50000
              name: slavelistener
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
          volumeMounts:
            - mountPath: /var/jenkins_home
              name: jenkins-home
              readOnly: false
            - mountPath: /var/jenkins_config
              name: jenkins-config
              readOnly: true
      volumes:
      - name: jenkins-config
        configMap:
          name: jenkins-config
      - name: jenkins-home
        hostPath:
              path: /Users/romansafronov/dev/tmp/k8s/jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    component: "jenkins-master"
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
    - port: 50000
      targetPort: 50000
      name: slavelistener
  selector:
    component: "jenkins-master"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
spec:
  rules:
  - host: jenkins.kube.local
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
